# cplusplus-search-engine

./: .gitignore  CMakeLists.txt  Corpus-tests  DataStructures-DiskHashTable-tests  DataStructures-HashTable-tests  DataStructures-Vector-tests  ISRAnd-tests  ISRAndTwitterIntegrityTest  ISREndDoc-tests  ISRMultiWordORTest  ISROR-tests  ISRWord-Multi-Test  ISRWord-tests  Indexer-tests  Indexer-twitter-tests  LOC.txt  MasterReader-tests  NestedAnd  Parser.cpp  Parser.h  ParserEndToEndTest  ParserTest  ProducerConsumerQueue.cpp  ProducerConsumerQueue.h  ProducerConsumerQueue_test.cpp  QueueTest  README.txt  STL-HashTable-tests  STL-Vector-tests  StemmerTest  StringProcessingTest  ThreadClass.h  Tokenizer.h  TokenizerTest  TryPopTest  URLTEST  Vector-tests  crawl  crawler-parser-indexer-Test  crawler-parser-indexer-test  (+35 more)
RankSVM/: SVM.cpp  SVM.h
bootstrap_landing_page/: get_search.js  index.html
build10k/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  crawlerStats.txt
build35/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  4-seek.txt  4-wordseek.txt  5-seek.txt  5-wordseek.txt  5.txt  crawlerStats.txt  master.txt
build4000/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  4-seek.txt  4-wordseek.txt  4.txt  5-seek.txt  5-wordseek.txt  5.txt  6-seek.txt  6-wordseek.txt  6.txt  7-seek.txt  7-wordseek.txt  7.txt  8-seek.txt  8.txt
build50/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  4-seek.txt  4-wordseek.txt  4.txt  5-seek.txt  5-wordseek.txt  5.txt  6-seek.txt  6-wordseek.txt  6.txt  7-seek.txt  7-wordseek.txt  7.txt  8-seek.txt  8-wordseek.txt  8.txt  crawlerStats.txt
build6000/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  crawlerStats.txt
build7k/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  2-seek.txt  2-wordseek.txt  2.txt  crawlerStats.txt
build8000/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  master.txt
buildBig/: 0-seek.txt  0-wordseek.txt  1-seek.txt  1-wordseek.txt  1.txt  crawlerStats.txt
buildIndex/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  10-seek.txt  10-wordseek.txt  10.txt  11-seek.txt  11-wordseek.txt  11.txt  12-seek.txt  12-wordseek.txt  12.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  4-seek.txt  4-wordseek.txt  4.txt  5-seek.txt  5-wordseek.txt  5.txt  6-seek.txt  6-wordseek.txt  6.txt  7-seek.txt  7-wordseek.txt  7.txt  8-seek.txt  8-wordseek.txt  8.txt  9-seek.txt  9-wordseek.txt  9.txt  master.txt  (+1 more)
buildIndex4000/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  10-seek.txt  10-wordseek.txt  10.txt  11-seek.txt  11-wordseek.txt  11.txt  12-seek.txt  12-wordseek.txt  12.txt  13-seek.txt  13-wordseek.txt  13.txt  14-seek.txt  14-wordseek.txt  14.txt  15-seek.txt  15-wordseek.txt  15.txt  16-seek.txt  16-wordseek.txt  16.txt  17-seek.txt  17-wordseek.txt  17.txt  18-seek.txt  18-wordseek.txt  18.txt  19-seek.txt  19-wordseek.txt  19.txt  2-seek.txt  2-wordseek.txt  2.txt  20-seek.txt  (+67 more)
buildStable/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  4-seek.txt  4-wordseek.txt  4.txt  crawlerStats.txt
buildTest/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  crawlerStats.txt  master.txt
buildTitle/: 0-seek.txt  0-wordseek.txt  0.txt  1-seek.txt  1-wordseek.txt  1.txt  2-seek.txt  2-wordseek.txt  2.txt  3-seek.txt  3-wordseek.txt  3.txt  4-seek.txt  4-wordseek.txt  4.txt  integrity0.txt  integrity1.txt
buildWiki/: 0-seek.txt  0-wordseek.txt  0.txt  crawlerStats.txt  master.txt
buildfail/: 0-wordseek.txt  0.txt  1-wordseek.txt  2-wordseek.txt
constraintSolver/: ISR.h  ISRAnd.cpp  ISRAnd.h  ISRContainer.cpp  ISRContainer.h  ISREndDoc.cpp  ISREndDoc.h  ISROr.cpp  ISROr.h  ISRPhrase.cpp  ISRPhrase.h  ISRWord.cpp  ISRWord.h  Post.cpp  Post.h  PostingList.cpp  PostingList.h  WordSeek.h
crawler/: CrawlerStatistics.cpp  CrawlerStatistics.h  HouseKeeper.cpp  HouseKeeper.h  LocalReader.h  SocketReader.cpp  SocketReader.h  StreamReader.h  UrlFrontier.cpp  UrlFrontier.h  blacklist.txt  crawler.cpp  crawler.h  hosts.txt  savedQueue.txt  seeds.txt  spider.cpp  spider.h  spiderTest.cpp  urlFrontierTest.h  wiki.txt
crawlerOutput/: en.wikipedia.org.txt  example.txt  www.nytimes.com.txt
devtools/: SumSpaceNumbers.cpp
indexStreamReader/: ISR.cpp  ISR.h
indexer/: Chunk.cpp  Chunk.h  Corpus.cpp  Corpus.h  DocumentEnding.h  IndexStreamReader.cpp  IndexStreamReader.h  Indexer.cpp  Indexer.h  IndexerConstants.h  IndexerTests.cpp  IndexerTwitterTests.cpp  MasterReader.cpp  PostingsSeekTableEntry.h  SeekEntry.h  SeekFileTests.cpp  UniquenessTests.cpp  WordInfo.h  index0-seek.txt  index0.txt  index1-seek.txt  index1.txt  index2-seek.txt  index2.txt  index3-seek.txt  index3.txt  index4-seek.txt  index4.txt  index5-seek.txt  index6-seek.txt  index7-seek.txt  index7.txt  index8-seek.txt  json.hpp  master-index.txt
parser/: Parser.cpp  Parser.h  Tokenizer.h  queryParser.cpp  queryParser.h  queryTokenizer.cpp  queryTokenizer.h
query/: Query.cpp  Query.h  Searcher.cpp  Searcher.h  graph_results.py  queryResults.txt  querySpeedTest.cpp
ranker/: Ranker.cpp  Ranker.h  Scorer.cpp  Scorer.h  Site.cpp  Site.h
robots/: en.wikipedia.org.txt  www.bbc.com.txt  www.dailymail.co.uk.txt  www.nytimes.com.txt
shared/: Document.cpp  Document.h  ParsedUrl.cpp  ParsedUrl.h  ProducerConsumerQueue.cpp  ProducerConsumerQueue.h  ProducerConsumerQueue_test.cpp  SharedHashMap.cpp  SharedHashMap.h  SharedHashMapTest.cpp  ThreadClass.cpp  ThreadClass.h  (+4 more)
(+343 files in other folders)
